--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 behave==1.2.6
+build==0.9.0
+importlib-metadata==5.0.0
+packaging==21.3
 parse==1.19.0
 parse-type==0.6.0
+pep517==0.13.0
+pyparsing==3.0.9
 six==1.16.0
+tomli==2.0.1
+typing_extensions==4.4.0
+zipp==3.10.0
