--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,27 @@
 behave==1.2.6
 build==0.9.0
-importlib-metadata==5.0.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
+cryptography==38.0.4
+dbus-python==1.3.2
+idna==3.4
+importlib-metadata==5.1.0
+jaraco.classes==3.2.3
+jeepney==0.8.0
+keyring==23.11.0
+more-itertools==9.0.0
 packaging==21.3
 parse==1.19.0
 parse-type==0.6.0
 pep517==0.13.0
+pycparser==2.21
 pyparsing==3.0.9
+PyTF==0.0.1
+PyYAML==6.0
+requests==2.28.1
+SecretStorage==3.3.3
 six==1.16.0
 tomli==2.0.1
-typing_extensions==4.4.0
-zipp==3.10.0
+urllib3==1.26.13
+zipp==3.11.0
