Added documentation and began adding some tests

--- a/pytf-test/pytf.yaml
+++ b/pytf-test/pytf.yaml
@@ -1,10 +1,9 @@
 jira.regression.test.query: 'type=Test'
-jira.progression.test.query: 'type=Story and status=Test'
-jira.test.execution.query: 'type="Test Execution" and status=Development'
+jira.progression.test.query: 'type=Story and status="In Progress"'
 jira.url: 'http://localhost:8080'
 use.local.feature.files: false
 download.feature.files: true
 testing.type: 'progression'
-use.access.token: false
+use.access.token: true
 upload.test.results: true
 logging.level: 'info'
