--- a/pytf/pyproject.toml
+++ b/pytf/pyproject.toml
@@ -20,3 +20,6 @@ classifiers = [
 [project.urls]
 "Homepage" = "https://github.com/cmorris616/pytf"
 "Bug Tracker" = "https://github.com/cmorris616/pytf/issues"
+
+[tool.setuptools.packages.find]
+exclude = ["docs*", "tests*"]
