Added more unit tests

--- a/pytf-test/pytf.yaml
+++ b/pytf-test/pytf.yaml
@@ -1,9 +1,10 @@
 jira.regression.test.query: 'type=Test'
 jira.progression.test.query: 'type=Story and status="In Progress"'
 jira.url: 'http://localhost:8080'
+jira.project.key: 'TP'
 use.local.feature.files: false
 download.feature.files: true
-testing.type: 'progression'
+testing.type: 'regression'
 use.access.token: true
 upload.test.results: true
 logging.level: 'info'
