--- a/qualipy/pyproject.toml
+++ b/qualipy/pyproject.toml
@@ -4,17 +4,24 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "qualipy"
-version = "0.0.1"
+version = "1.0.1"
 authors = [
   { name="Charles Morris", email="cmorris616@gmail.com" },
 ]
 description = "Automated test process framework"
-readme = "README.md"
+readme = "readme.md"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+keywords = ["test", "testing", "project management", "jira", "framework"]
+dependencies = [
+  "behave",
+  "keyring",
+  "requests",
+  "PyYAML"
 ]
 
 [project.urls]
