Added plugin capability for authenticators, project management, and testing.  Updated to fail gracefully if features directory does not exist.  Updated documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 notes
 qualipy-env/
 qualipy/dist/
+docs/build/
 __pycache__/
 qualipy.egg-info/
 run.sh
 qualipy_output/
 .coverage
+test_plugins/
