--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alabaster==0.7.16
+Babel==2.14.0
 behave==1.2.6
 build==1.0.3
 certifi==2024.2.2
@@ -6,19 +8,30 @@ charset-normalizer==3.3.2
 coverage==7.4.1
 cryptography==42.0.2
 dbus-python==1.3.2
+docutils==0.20.1
+et-xmlfile==1.1.0
 idna==3.6
+imagesize==1.4.1
 importlib-metadata==7.0.1
 iniconfig==2.0.0
 jaraco.classes==3.3.0
 jeepney==0.8.0
+Jinja2==3.1.3
 keyring==24.3.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
 more-itertools==10.2.0
+myst-parser==2.0.0
+openpyxl==3.1.2
 packaging==23.2
 parse==1.20.1
 parse-type==0.6.2
 pep517==0.13.1
 pluggy==1.4.0
 pycparser==2.21
+Pygments==2.17.2
 pyparsing==3.1.1
 pyproject_hooks==1.0.0
 pytest==8.0.0
@@ -26,6 +39,16 @@ PyYAML==6.0.1
 requests==2.31.0
 SecretStorage==3.3.3
 six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==7.2.6
+sphinx-rtd-theme==2.0.0
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
 tomli==2.0.1
-urllib3==2.2.0
+urllib3==2.2.1
 zipp==3.17.0
