--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,52 @@
-alabaster==0.7.16
-Babel==2.15.0
-backports.tarfile==1.2.0
+alabaster==1.0.0
+babel==2.16.0
 behave==1.2.6
-build==1.2.1
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-coverage==7.5.3
-cryptography==42.0.7
-dbus-python==1.3.2
+build==1.2.2.post1
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.0
+coverage==7.6.9
+cryptography==44.0.0
 docutils==0.21.2
-et-xmlfile==1.1.0
-idna==3.7
+idna==3.10
 imagesize==1.4.1
-importlib_metadata==7.1.0
-iniconfig==2.0.0
 jaraco.classes==3.4.0
-jaraco.context==5.3.0
-jaraco.functools==4.0.1
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
 jeepney==0.8.0
 Jinja2==3.1.4
-keyring==25.2.1
+keyring==25.5.0
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdit-py-plugins==0.4.1
+MarkupSafe==3.0.2
+mdit-py-plugins==0.4.2
 mdurl==0.1.2
-more-itertools==10.2.0
-myst-parser==3.0.1
-nh3==0.2.17
-openpyxl==3.1.3
-packaging==24.0
-parse==1.20.1
-parse-type==0.6.2
-pep517==0.13.1
-pkginfo==1.10.0
-pluggy==1.5.0
+more-itertools==10.5.0
+myst-parser==4.0.0
+openpyxl==3.1.5
+nh3==0.2.20
+packaging==24.2
+parse==1.20.2
+parse_type==0.6.4
+pkginfo==1.12.0
 pycparser==2.22
 Pygments==2.18.0
-pyparsing==3.1.2
-pyproject_hooks==1.1.0
-pytest==8.2.1
-PyYAML==6.0.1
-qualipy==1.1.0
-readme_renderer==43.0
+pyproject_hooks==1.2.0
+PyYAML==6.0.2
+readme_renderer==44.0
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
-rich==13.7.1
+rich==13.9.4
 SecretStorage==3.3.3
-six==1.16.0
+six==1.17.0
 snowballstemmer==2.2.0
-Sphinx==7.3.7
-sphinx-rtd-theme==2.0.0
-sphinxcontrib-applehelp==1.0.8
-sphinxcontrib-devhelp==1.0.6
-sphinxcontrib-htmlhelp==2.0.5
-sphinxcontrib-jquery==4.1
+Sphinx==8.1.3
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.7
-sphinxcontrib-serializinghtml==1.1.10
-tomli==2.0.1
-twine==5.1.0
-urllib3==2.2.1
-zipp==3.19.0
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+tomli==2.2.1
+twine==6.0.1
+urllib3==2.2.3
